2008-04-09  Ville Vainio <vivainio@gmail.com>

	* deep_reload.py: do not crash on from __future__ import 
	absolute_import. Close #244.

2008-04-02  Ville Vainio <vivainio@gmail.com>

	* ipy_winpdb.py: New extension for winpdb integration.  %wdb
	test.py is winpdb equivalent of %run -d test.py.  winpdb is a
	crossplatform remote GUI debugger based on wxpython.

2008-03-29  Ville Vainio <vivainio@gmail.com>

	* ipython.rst, do_sphinx.py: New documentation base, based on
	reStucturedText and Sphinx (html/pdf generation).  The old Lyx
	based documentation will not be updated anymore.

	* jobctrl.py: Use shell in Popen for 'start' command (in windows).

2008-03-24  Ville Vainio <vivainio@gmail.com>

	* ipython.rst, do_sphinx.py: New documentation base, based on
	reStucturedText and Sphinx (html/pdf generation).  The old Lyx
	based documentation will not be updated anymore.

	ipython.rst has up to date documentation on matters that were not
	documented at all, and it also removes various
	misdocumented/deprecated features.
	
2008-03-22  Ville Vainio <vivainio@gmail.com>

	* Shell.py: Merge mtexp branch:
	https://code.launchpad.net/~ipython/ipython/mtexp

	Privides simpler and more robust MTInteractiveShell that won't
	deadlock, even when the worker thread (GUI) stops doing runcode()
	regularly. r71.

2008-03-20  Ville Vainio <vivainio@gmail.com>

	* twshell.py: New shell that runs IPython code in Twisted reactor.
	Launch by doing ipython -twisted. r67.

2008-03-19  Ville Vainio <vivainio@gmail.com>

	* Magic.py: %rehashx works correctly when shadowed system commands
	have upper case characters (e.g. Print.exe). r64.

	* ipy_bzr.py, ipy_app_completers.py: new bzr completer that also
	knows options to commands, based on bzrtools. Uses bzrlib
	directly. r66.

2008-03-16  Ville Vainio <vivainio@gmail.com>

	* make_tarball.py: Fixed for bzr.

	* ipapi.py: Better _ip.runlines() script cleanup. r56,r79.

	 * ipy_vimserver.py, ipy.vim: New extension for vim server mode,