@@ -1,3 +1,7 @@
+2008-04-15  Ville Vainio <vivainio@gmail.com>
+
+	* genutils.py: SList.grep supports 'field' argument
+
 2008-04-09  Ville Vainio <vivainio@gmail.com>
 
 	* deep_reload.py: do not crash on from __future__ import 
